--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   </div>
 </header>
 
+<button id="downloadScheduleBtn" class="download-btn fa-solid fa-download">Download</button>
+
 <main class="page wrap">
   <section class="board card">
     <div class="table-wrap">
@@ -88,5 +90,6 @@
 </div>
 
 <script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
