--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -14,7 +16,7 @@
   <div class="topbar-inner">
     <div class="brand">
       <div class="brand-left">
-        <div class="logo-square">SM</div>
+        <div class="logo-square">IX</div>
         <div class="brand-title">
           <div class="title-main">DAILY SCHEDULE</div>
           <div class="title-sub">Week view — click a cell to edit</div>
@@ -25,7 +27,10 @@
   </div>
 </header>
 
-<button id="downloadScheduleBtn" class="download-btn fa-solid fa-download">Download</button>
+<button id="downloadScheduleBtn" class="download-btn">
+  <i class="fa-solid fa-download"></i> Download
+</button>
+
 
 <main class="page wrap">
   <section class="board card">
