--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="topbar">
   <div class="topbar-inner">
     <div class="brand-left">
-      <div class="logo-square">SM</div>
+      <div class="logo-square">IX</div>
       <div class="brand-title">
         <div class="title-main">DAILY SCHEDULE</div>
         <div class="title-sub">Week view — click your cell to edit</div>
